[tool.poetry]
name = "qqq-tui"
version = "0.1.0"
description = ""
authors = ["KofTwentyTwo <james@kof22.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.83.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
